--- a/wirkungsgrad.tex
+++ b/wirkungsgrad.tex
@@ -11,7 +11,7 @@
 	Wirkungsgrad}
 
 % Fußzeile
-% \addbibresource{leistung.bib}
+\addbibresource{SolarWirkungsgrad.bib}
 
 \usepackage{luacode}
 
@@ -935,7 +935,7 @@ solarzellen für das Sonnenabstrahlungsspektrum optimiert werden.
 \subsection{Diodenparameter und Wirkungsgrad einer Solarzelle}
 
 \newpage
-% \printbibliography
+\printbibliography
 \listoffigures
 \listoftables
 \end{document}
