--- a/SolarWirkungsgrad.bib
+++ b/SolarWirkungsgrad.bib
@@ -19,3 +19,21 @@
 	urldate = {2023-03-12},
 	langid = {english},
 }
+
+@misc{knoll_solarzelle_nodate,
+	title = {Die Solarzelle},
+	publisher = {Institut für Experimentalphysik {KFU}},
+	author = {Knoll, Peter and Schöffmann, A and Platauf, Günther},
+	langid = {german},
+	note = {guenther.paltauf@uni-graz.at},
+}
+
+@misc{hohenau_warmepumpe_2014,
+	title = {Wärmepumpe},
+	shorttitle = {Erste Version basierend auf der Betriebsanleitung von {LH}.},
+	publisher = {Institut für Physik, Karl-Franzens Universität Graz},
+	author = {Hohenau, Andreas},
+	date = {2014-08-28},
+	langid = {german},
+	note = {andreas.hohenau@uni-graz.at},
+}
