--- a/wirkungsgrad.tex
+++ b/wirkungsgrad.tex
@@ -135,11 +135,11 @@ Kühlschränken verwendet.
 		\includegraphics[width =0.8\textwidth]{./figures/ph_diagramm_grundlagen.PNG}
 	\end{center}
 	\caption[p-H Diagramm des Kreisprozesses]{p-H Diagramm des Kreisprozesses
-		\cite{unterlagen_warmepumpe}
+		\cite{hohenau_warmepumpe_2014}
 	}\label{fig:ph_diagramm_grundlagen}
 \end{figure}
 
-Der Kältekreislauf besteht aus vier Hauptstufen \cite{unterlagen_warmepumpe}:
+Der Kältekreislauf besteht aus vier Hauptstufen \cite{hohenau_warmepumpe_2014}:
 
 \begin{enumerate}
 	\item Isentrope Verdichtung: Das Kältemittel wird durch einen Kompressor komprimiert,
@@ -198,7 +198,7 @@ Funktionsweise der Solarzelle ist in folgender
 		\includegraphics[width =0.8\textwidth]{./figures/solarzelle_grundlagen.PNG}
 	\end{center}
 	\caption[Schematische Funktionsweise der Solarzelle]{Schematische Funktionsweise der
-		Solarzelle~\cite{unterlagen_solarzelle}
+		Solarzelle~\cite{knoll_solarzelle_nodate}
 	}\label{fig:solarzelle_grundlagen}
 \end{figure}
 
@@ -239,7 +239,7 @@ Durch die Auswertung und Analyse dieser Schlüsselparameter kann die
 Diodenkennlinie wertvolle Erkenntnisse über die Leistung einer Solarzelle
 liefern. Diese Informationen können dazu genutzt werden, das Design der
 Solarzelle zu optimieren und ihren Wirkungsgrad und ihre Leistung zu verbessern
-\cite{unterlagen_solarzelle}.
+\cite{knoll_solarzelle_nodate}.
 
 \section{Versuchsanordnung}\label{sec:versuchsanordnung}
 
@@ -262,7 +262,7 @@ Skizze dessen, \autoref{fig:skizze_warmepumpe}, sind im folgenden sichtbar.
 		\includegraphics[width =0.5\textwidth]{./figures/warmepumpe_skizze.PNG}
 	\end{center}
 	\caption[Skizze des Versuchsaufbaus der Wärmepumpe]{Skizze des Versuchsaufbaus der
-		Wärmepumpe \cite[text]{unterlagen_warmepumpe}                             \\
+		Wärmepumpe \cite[text]{hohenau_warmepumpe_2014}                           \\
 		1 \dots Kompressor 230 V; 50/60 Hz. Leistungsaufnahme ca. 130 W bei 50 Hz \\
 		2 \dots ausschwenkbare Stellfläche für rot-markierten Warmwasserbehälter  \\
 		3 \dots Verflüssiger                                                      \\
@@ -318,8 +318,8 @@ Messbereich zu wählen.
 		\includegraphics[width =0.5\textwidth]{./figures/schaltplan.PNG}
 	\end{center}
 	\caption[Schaltplan der Solarzelle]{Schaltplan der Solarzelle
-		\cite{unterlagen_solarzelle} \\
-		A \dots Amperemeter          \\
+		\cite{knoll_solarzelle_nodate} \\
+		A \dots Amperemeter            \\
 		V \dots Voltmeter
 	}\label{fig:schaltplan}
 \end{figure}
@@ -596,7 +596,7 @@ verbunden und das Programm, Kickstart geöffnet. Nun wird in der entsprechenden
 Software unter dem Menüpunkt "new" eine neue Messung gestartet. Nach
 erfolgreicher Verbindung mit dem Sourcemeter 2450 und der eingabe aller
 Parameter, wie z.B.\ den Maximalen Strom, wie in den Unterlagen aus
-\cite{unterlagen_solarzelle} beschrieben, kann die Messung gestartet werden.
+\cite{knoll_solarzelle_nodate} beschrieben, kann die Messung gestartet werden.
 Die so erzeugte Diodenkennlinie ist in \autoref{fig:mess_dunkelkennlinie}
 sichtbar.
 
