updating the tables footnotesize

--- a/tables/messreihe_werte_druck.tex
+++ b/tables/messreihe_werte_druck.tex
@@ -1,4 +1,4 @@
-\begin{tblr}{colspec={S[table-format=4.0(1)]S[table-format=1.2(2)]S[table-format=2.2(2)]}}
+\begin{tblr}{cells={font=\footnotesize},colspec={S[table-format=4.0(1)]S[table-format=1.2(2)]S[table-format=2.2(2)]}}
 {{{$t$ / \si{\second}}}} & {{{$p_k$ / \si{\bar}}}} & {{{$p_w$ / \si{\bar}}}}\\
 0(2) & 3.20(10) & 6.60(10)\\
 115(2) & 3.20(10) & 7.00(10)\\
