--- a/tables/messreihe_werte_serienschaltung.tex
+++ b/tables/messreihe_werte_serienschaltung.tex
@@ -1,4 +1,4 @@
-\begin{tblr}{colspec={S[table-format=2.3(2)]S[table-format=2.3(2)]}}
+\begin{tblr}{cells={font=\footnotesize},colspec={S[table-format=2.3(2)]S[table-format=2.3(2)]}}
 {{{$U$ / \si{\volt}}}} & {{{$I$ / \si{\milli\ampere}}}}\\
 12.03(3) & 0.000(3)\\
 11.88(2) & 12.18(13)\\
