--- a/tables/messreihe_werte_abgedeckt.tex
+++ b/tables/messreihe_werte_abgedeckt.tex
@@ -1,4 +1,4 @@
-\begin{tblr}{colspec={S[table-format=2.3(2)]S[table-format=1.3(1)]}}
+\begin{tblr}{cells={font=\footnotesize},colspec={S[table-format=2.3(2)]S[table-format=1.3(1)]}}
 {{{$U$ / \si{\volt}}}} & {{{$I$ / \si{\milli\ampere}}}}\\
 11.45(2) & 0.000(3)\\
 6.540(12) & 6.68(7)\\
