adding solar daten 2

--- a/wirkungsgrad.tex
+++ b/wirkungsgrad.tex
@@ -612,7 +612,6 @@ in \autoref{fig:abgedeckt} sichtbar. Die entsprechenden Maße sind gemeinsam,
 mit den anfangs gemessenen Werten der Solarzelle in folgender Aufzählung
 angeführt.
 
-%todo tab:grose_solarzelle
 \begin{enumerate}
 	\item Fläche ganz: $\SI{10.0(2)}{\cm}\cdot \SI{8.0(2)}{\cm}=\SI{80(3)}{\cm\squared}$
 	\item Fläche bedeckt: $\SI{10.0(2)}{\cm}\cdot
@@ -664,13 +663,19 @@ sichtbar.
 Nun werden die Lampen, wie bereits in \autoref{sec:versuchsanordnung}
 beschrieben, positioniert und ebenfalls die Kennlinien aufgenommen. Die
 entsprechende Leistung der Lichtquelle wird anhand des Sensors bestimmt und vom
-analogen Messgerät abgelesen, was in folgender \autoref{tab:werte_solarzelle2}
+analogen Messgerät abgelesen, was in folgender \Cref{enum:werte_solarzelle2}
 ersichtlich ist. Auch die Diodenkennlinien für die verschiedenen Lampen werden,
 wie zuvor die Dunkelkennlinie, aufgenommen und sind in den folgenden
 \autoref{fig:ausw_kennlinie_hell_lampe} bis
 \autoref{fig:mess_hellkennlinie_led} sichtbar.
 
-%todo tab:werte_solarzelle2
+\begin{enumerate}\label{enum:werte_solarzelle2}
+	\item Durchmesser des Sensors: $\SI{1.80(5)}{\cm}$\cite{noauthor_2450_nodate}
+	\item Fläche der Solarzelle: $\SI{1.70(10)}{\cm}\cdot \SI{3.90(10)}{\cm}$
+	\item Strahlungsfluss Lampe Messung 1: $\SI{63(2)}{\milli\watt}$
+	\item Strahlungsfluss Lampe Messung 2: $\SI{106(3)}{\milli\watt}$
+	\item Strahlungsfluss LED Messung 2: $\SI{264(3)}{\milli\watt}$
+\end{enumerate}
 
 \begin{figure}[H]
 	\centering
