erklaerung der gleichung

--- a/wirkungsgrad.tex
+++ b/wirkungsgrad.tex
@@ -105,7 +105,7 @@ Leistungszahl bedeutet eine effizientere Wärmepumpe, da sie mehr Wärmeenergie
 für die gleiche Energiemenge übertragen kann (d.\ h.\ mit einem COP von
 $\epsilon$ kann man $\epsilon$ Einheiten an Wärmeenergie Energie für jede
 verbrauchte Energieeinheit übertragen).
-%todo max ist der teil in der Klammer mt dem COP notwendig?
+%todo max ist der teil in der Klammer mt dem COP notwendig? Ne nicht wirklich
 
 \begin{equation}
 	\epsilon = \frac{\dot{Q}}{P_{el}}
@@ -848,7 +848,9 @@ gefittet:
 	\label{eq:kennlinienFit}
 \end{equation}
 
-%todo erklaere die symbole
+Dabei ist $I_{S1}$ der Sättigungsstrom, $U$ die gemessene Spannung, $k_b$ die
+Boltzmann-Konstante, $e$ die Elementar Ladung, $T$ die Temperatur der
+Solarzelle, $f_1$ der Diodenfaktor und $I_{ph}$ der Photostrom.
 
 Damit die Konvergenz der Parameter funktionieren konnte, wurde die Anzahl der
 freien Parameter reduziert, dafür wurde die Temperatur gewählt, welche am
