cosinus fehler diskussion

--- a/wirkungsgrad.tex
+++ b/wirkungsgrad.tex
@@ -961,7 +961,11 @@ einer erneuten Durchführung des Versuchs sollte daher die Flüssigkeit deutlich
 
 mal drauf scheinen lassen damit sich eine betriebstemperatur einstellen kann
 
-% todo verdrehung (cos)
+Die Solarzelle waren zur Lichtquelle verdreht, deshalb ist die Effektive Fläche
+mit dem Cosinus zur ganzen Fläche verbunden ($A' = A \cos(\theta)$). Der
+dadurch entstandene prozentuelle Fehler beträgt somit
+$100(1-\frac{A'}{A})=\SI{0.38}{\percent}$.
+
 \subsubsection{Serienschaltung der beiden Solarzellen}
 
 Die Serienschaltung bietet eine höhere Spannung bei einem niedrigeren Strom als
