genauere erklärung der methodik

--- a/wirkungsgrad.tex
+++ b/wirkungsgrad.tex
@@ -982,7 +982,7 @@ wahrscheinlich der Grund für die Diskrepanz zum Ohmschen-Model.
 \subsubsection{Serienschaltung der beiden Solarzellen, wobei eine Solarzelle partiell abgeschattet wird}
 
 Bei den teils bedeckten in Serie geschalteten Solarzellen ist ein enormer
-Abfall in gewonner Leistung vonstatten gegangen. Da die beschattete Fläche ein
+Abfall in gewonnene Leistung vonstatten gegangen. Da die beschattete Fläche ein
 parasitärer Widerstand ist.
 
 \subsection{Diodenparameter und Wirkungsgrad einer Solarzelle}
@@ -990,8 +990,13 @@ parasitärer Widerstand ist.
 Dunkelkennlinie hat die meisten Parameter null wie $I_{ph}$, was auch mit der
 Erwartung übereinstimmt
 
-techinque um die Watt messung wahrheitsgetreuer zu machen mit dem sensor punkte
-abfahren und ein mittel für die linie erstellen
+Da die Bestrahlungsstärke mit dem Abstand zum Quadrat absinkt, ist der
+gemessene Punkt nur ein Informations Punkt und nicht representative für die
+gesamte Bestrahlungsstärke der Solarzelle. Deshalb wäre eine Technik um die
+Watt Messung wahrheitsgetreuer zu machen gewollt. Dies kann zum Beispiel mit
+einer Approximation der Abstrahlungsfläche durch Kugelfächen gemacht werden. Um
+dies zu machen muss der Sensor ein Paar Punkte abfahren und dann ein
+Flächenmittelwert, für die interessierte Fläche, erstellt werden.
 
 Bläuliche Lampe Energie wird schlechter auf genommen von der Solarzellen
 deswegen trotz der hohen Bestrahlungsstärke wird kaum was konvertiert, da
