fixen der tabellen

--- a/tables/messreihe_werte_parallelschaltung.tex
+++ b/tables/messreihe_werte_parallelschaltung.tex
@@ -1,4 +1,4 @@
-\begin{tblr}{cells={font=\footnotesize},colspec={S[table-format=1.3(2)]S[table-format=3.3(3)]}}
+\begin{tblr}{cells={font=\footnotesize},rowsep=0pt,colspec={S[table-format=1.3(2)]S[table-format=3.3(3)]}}
 {{{$U$ / \si{\volt}}}} & {{{$I$ / \si{\milli\ampere}}}}\\
 5.760(11) & 0.000(3)\\
 5.840(11) & 5.99(7)\\
